# sqlquerygraph

./: .coveragerc  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  LICENSE  README.md  docker-compose.yml  exporter.py  extractor.py  loader.py  pyproject.toml  sqlquerygraph.py  writer.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: pytest.yml  pytesting.yml
data/: example_import.cypher  loader.sh
data/analytics/: author.sql  commit.sql  committer.sql  repo.sql  user.sql
example/neo4j/: example_import.cypher  query_constraints.cypher  query_nodes.cypher  query_relationships.cypher  reporting_github_repos_dependency.csv
example/reporting/: user_activity.sql
example/sql/analytics/: repo.sql
guide/: module.md
neo4j/: example_import.cypher  loader.py  loader.sh  reporting_tables.csv
tests/: conftest.py
tests/fixtures/: fixture_exporter.py  fixture_extractor.py  fixture_writer.py
tests/integration/: test_extractor.py  test_integration_extractor.py
tests/unit/: test_exporter.py  test_extractor.py  test_unit_exporter.py  test_unit_extractor.py  test_unit_writer.py
