[tool.poetry]
name = "sqlquerygraph"
version = "0.1.0"
description = "Represent your SQL query as a graph"
authors = ["avisionh <a_vision@hotmail.co.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
