[tool.poetry]
name = "sqlquerygraph"
version = "0.1.0"
description = "Represent your SQL query as a graph"
authors = ["avisionh <a_vision@hotmail.co.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pre-commit = "^2.12.1"
detect-secrets = "^1.1.0"
direnv = "^2020.12.3"
flake8 = "^3.9.2"
moz-sql-parser = "^4.40.21126"
tqdm = "^4.60.0"
pytest = "^6.2.4"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
